# cpp_cli_benchmark

./: .gitignore  CMakeLists.txt  README.md  bench_x64.cpp  benchmark.cpp  benchmark_normal.cpp  index.html  normal_bench_x64.cpp  report.js  start.cpp  style.css
ffmpeg/: ffmpeg.bat  ffmpeg_bg.vbs
include/: benchmark_app.hpp
include/platform/windows/: runtime.hpp
include/report/: runtime_utils.hpp
src/: main.cpp
src/app/: benchmark_app.cpp
src/app/chunks/: level_mild.inc  level_normal.inc  level_spicy.inc  setup_and_menu.inc  work_tasks.inc
src/platform/windows/: runtime.cpp
src/report/: runtime_utils.cpp
